# anita

./: LICENSE  README.md  pip-dev.sh  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  run_doctests.py  test_import.py
anita/: __init__.py  dating.py  jj.py  logit.py  notascript.py  pathfinder.py  private.py  timer.py  util.py
tests/: test_dating.py  test_jj.py
